--- a/public/monitor.html
+++ b/public/monitor.html
@@ -464,6 +464,7 @@
                 <a href="/">Dashboard</a>
                 <a href="/monitor.html" class="active">Monitor</a>
                 <a href="/files.html">Files</a>
+                <a href="/settings">Settings</a>
             </nav>
         </div>
     </header>
