--- a/public/files.html
+++ b/public/files.html
@@ -26,7 +26,7 @@
                                 Folder
                             </button>
                             <button id="createFileBtn" class="btn-nav btn-action" title="Create File">
-                                <i class="fas fa-file-plus"></i>
+                                <i class="fas fa-plus"></i>
                                 File
                             </button>
                             <button id="uploadBtn" class="btn-nav btn-upload" title="Upload Files">
@@ -175,7 +175,7 @@
         <div class="modal-overlay"></div>
         <div class="modal-content">
             <div class="modal-header">
-                <h3><i class="fas fa-file-plus"></i> Create New File</h3>
+                <h3><i class="fas fa-file"></i> Create New File</h3>
                 <button class="modal-close" id="closeFileModal">
                     <i class="fas fa-times"></i>
                 </button>
@@ -191,11 +191,11 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn-nav btn-action" id="confirmCreateFile">
-                    <i class="fas fa-file-plus"></i>
+                <button class="action-save" id="confirmCreateFile">
+                    <i class="fas fa-save"></i>
                     Create File
                 </button>
-                <button class="btn-nav btn-secondary" id="cancelCreateFile">
+                <button class="action-cancel" id="cancelCreateFile">
                     <i class="fas fa-times"></i>
                     Cancel
                 </button>
